2002-06-07 Luc Mazardo <luc@mazardo.com>

	* CHANGE: (AUTHORS) add olivier in this file

	* CHANGE: (sdlmixer*) change prototype of open_audio now 
	we use optionnal parameter for chunksize settings

2002-06-05 Olivier Andrieu <oliv__a@users.sourceforge.net>

	* CHANGE: (INSTALL) add some documentation

	* CHANGE: (configure.in, Makefile, 
		   makefile.toplevel.in, configure 
		   */Makefile bin/ocamlsdl.in)  
	rewrite of the Makefiles use ocamlmklib when available

	*  FIX: (common.c) missing include fail.h

2002-05-30 Olivier Andrieu <oliv__a@users.sourceforge.net>

	* FIX: (sdlvideo.mli, sdlvideo.ml) typo fix in create_rbg_surface

2002-05-30  Luc Mazardo <luc@mazardo.com>

        * CHANGE: (src/common.{c,h} src/sdl_stub.c src/sdlvideo_stub.c) 
        list manipulation hope this is the last. 

        * NEW: (src/sdlinit_flag.{h,c} src/sdlvideo_flag.{c,h}) 
        varcc utility generated files 

        * CHANGE: (src/sdl.ml src/sdl.mli src/sdlvideo.ml src/sdlvideo.mli)
        hope it's the last modification of video_flags and init_flags

2002-05-28  Luc Mazardo <luc@mazardo.com>

	* CHANGE: (src/common.{c,h}) list manipulation applying gc patch
	
	* CHANGE: (src/sdlvideo_stub.c src/sdl_stub.c) use new functions
	for list manipulation (gc patch)

	* ADD: (src/sdlvideo.mli, src/sdlvideo.ml) some labels
	* CHANGE: (src/sdlvideo.mli, src/sdlvideo.ml) video_flags
	constructors (gc patch)

	* CHANGE: (configure.in, makefile.toplevel.in, 
	           src/Makefile.in, src/sdl_stub.c,
		   samples/Makefile.in) apply oa patch. 
	Now we could use --disable-sdl-{ttf, mixer, image}

2002-05-27  Luc Mazardo <luc@mazardo.com>

	* CHANGE: (src/sdlevent*) applying gc patch about event module:
	adding wait/pull/pump

2002-05-22  Luc Mazardo <luc@mazardo.com>

	* CHANGE: (README.cvs) add cvs instructions for getting fixed and
	devel release. Removing old instructions concerning branching and 
	merging (the way explaned is not the usual).
